# btc-arb

./: CMakeLists.txt  README.md  collect_easy.cpp  log_reporter.hpp  main.cpp  market_logger.cpp  market_logger.hpp  ticker_plant.hpp
.ipynb_checkpoints/: Untitled0-checkpoint.ipynb
src/: .dir-locals.el  CMakeLists.txt  collect.cpp  enum_utils.hpp  log_reporter.cpp  log_reporter.hpp  main.cpp  market_logger.cpp  market_logger.hpp  mmap.cpp  mtgox.hpp  ticker_plant.cpp  ticker_plant.hpp
